@@ -6,6 +6,7 @@ with respect to new features and compatibility changes.
 
 2019-02-25
  * Added option to wing.object.save() in wing.vue.js.
+ * Added wing-select-new directive to wing.vue.js.
 
 2019-02-12
  * Added get_field_options() and format_field_options() to wing.vue.js.
